--- a/Forma Principal/Forma Principal.csproj
+++ b/Forma Principal/Forma Principal.csproj
@@ -95,5 +95,19 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Proyecto_Contabilidad\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
+      <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
+      <Name>Funcionalidad_Formularios</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GestionAutores\GestionAutores.csproj">
+      <Project>{e5bd4f30-a24b-49b7-ad47-abdc01663af9}</Project>
+      <Name>GestionAutores</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GestionGeneros\GestionGeneros.csproj">
+      <Project>{523a8aed-2a96-42c9-90fc-216e5517384b}</Project>
+      <Name>GestionGeneros</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
