--- a/GestionAutores/GestionAutores.csproj
+++ b/GestionAutores/GestionAutores.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -107,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="library.ico" />
+    <None Include="Resources\85622928-icono-de-perfil-de-avatar-predeterminado-marcador-de-posición-de-foto-gris-vectores-de-ilustraciones.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
