--- a/GestionAutores/GestionAutores.csproj
+++ b/GestionAutores/GestionAutores.csproj
@@ -108,7 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="library.ico" />
-    <None Include="Resources\85622928-icono-de-perfil-de-avatar-predeterminado-marcador-de-posición-de-foto-gris-vectores-de-ilustraciones.jpg" />
+    <None Include="Resources\predeterminada.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
