--- a/GestionAutores/GestionAutores.csproj
+++ b/GestionAutores/GestionAutores.csproj
@@ -78,25 +78,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fichaAutor.resx">
       <DependentUpon>fichaAutor.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionAutores.resx">
       <DependentUpon>frmGestionAutores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -111,6 +112,10 @@
     <None Include="Resources\predeterminada.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Proyecto_Contabilidad\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
+      <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
+      <Name>Funcionalidad_Formularios</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
       <Project>{c59ba085-8b56-44ca-83f0-91fe93037f79}</Project>
       <Name>Dominio</Name>
