--- a/CustomControls/CustomControls.csproj
+++ b/CustomControls/CustomControls.csproj
@@ -48,12 +48,22 @@
     <Compile Include="Gender.Designer.cs">
       <DependentUpon>Gender.cs</DependentUpon>
     </Compile>
+    <Compile Include="GraphicsExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rounded Panel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Rounded Panel.Designer.cs">
+      <DependentUpon>Rounded Panel.cs</DependentUpon>
+    </Compile>
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Gender.resx">
       <DependentUpon>Gender.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Rounded Panel.resx">
+      <DependentUpon>Rounded Panel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
