--- a/GestionAutores/GestionAutores.csproj
+++ b/GestionAutores/GestionAutores.csproj
@@ -79,7 +79,6 @@
     <Compile Include="frmListaAutores.Designer.cs">
       <DependentUpon>frmListaAutores.cs</DependentUpon>
     </Compile>
-    <Compile Include="ObjetoAutor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fichaAutor.resx">
@@ -124,6 +123,10 @@
     <ProjectReference Include="..\..\Proyecto_Contabilidad\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
       <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
       <Name>Funcionalidad_Formularios</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BibliotecaDeClases\BibliotecaDeClases.csproj">
+      <Project>{c2d09a6e-6f89-4e32-b2fd-34db16c5cbea}</Project>
+      <Name>BibliotecaDeClases</Name>
     </ProjectReference>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
       <Project>{c59ba085-8b56-44ca-83f0-91fe93037f79}</Project>
