--- a/Login/Login.csproj
+++ b/Login/Login.csproj
@@ -146,6 +146,8 @@
     </Content>
     <None Include="Resources\585e4beacb11b227491c3399.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Imagenes\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
