--- a/BibliotecaDeClases/BibliotecaDeClases.csproj
+++ b/BibliotecaDeClases/BibliotecaDeClases.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImagenAutor.cs" />
+    <Compile Include="ObjectManager.cs" />
     <Compile Include="ObjetoAutor.cs" />
+    <Compile Include="ObjetoMiembro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
