--- a/GestionUsuarios/GestionMiembros.csproj
+++ b/GestionUsuarios/GestionMiembros.csproj
@@ -97,6 +97,10 @@
       <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
       <Name>Funcionalidad_Formularios</Name>
     </ProjectReference>
+    <ProjectReference Include="..\BibliotecaDeClases\BibliotecaDeClases.csproj">
+      <Project>{c2d09a6e-6f89-4e32-b2fd-34db16c5cbea}</Project>
+      <Name>BibliotecaDeClases</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CustomControls\CustomControls.csproj">
       <Project>{275c59e3-3f7e-4c80-9963-8e3e4b2a0bcc}</Project>
       <Name>CustomControls</Name>
