--- a/BibliotecaDeClases/BibliotecaDeClases.csproj
+++ b/BibliotecaDeClases/BibliotecaDeClases.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ImagenAutor.cs" />
     <Compile Include="ObjectManager.cs" />
     <Compile Include="ObjetoAutor.cs" />
+    <Compile Include="ObjetoEditorial.cs" />
     <Compile Include="ObjetoMiembro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
