--- a/Forma Principal/Forma Principal.csproj
+++ b/Forma Principal/Forma Principal.csproj
@@ -96,13 +96,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Proyecto_Contabilidad\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
-      <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
-      <Name>Funcionalidad_Formularios</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Autenticacion\Autenticacion.csproj">
       <Project>{cb0e25f9-d419-4fb2-8c69-4b537806b89a}</Project>
       <Name>Autenticacion</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
+      <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
+      <Name>Funcionalidad_Formularios</Name>
     </ProjectReference>
     <ProjectReference Include="..\GestionAutores\GestionAutores.csproj">
       <Project>{e5bd4f30-a24b-49b7-ad47-abdc01663af9}</Project>
