--- a/GestionManagers/GestionManagers.csproj
+++ b/GestionManagers/GestionManagers.csproj
@@ -80,10 +80,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Proyecto_Contabilidad\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
-      <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
-      <Name>Funcionalidad_Formularios</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Autenticacion\Autenticacion.csproj">
       <Project>{cb0e25f9-d419-4fb2-8c69-4b537806b89a}</Project>
       <Name>Autenticacion</Name>
@@ -95,6 +91,10 @@
     <ProjectReference Include="..\Dominio\Dominio.csproj">
       <Project>{c59ba085-8b56-44ca-83f0-91fe93037f79}</Project>
       <Name>Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
+      <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
+      <Name>Funcionalidad_Formularios</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
