--- a/Login/Login.csproj
+++ b/Login/Login.csproj
@@ -103,10 +103,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Proyecto_Contabilidad\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
-      <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
-      <Name>Funcionalidad_Formularios</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Autenticacion\Autenticacion.csproj">
       <Project>{cb0e25f9-d419-4fb2-8c69-4b537806b89a}</Project>
       <Name>Autenticacion</Name>
@@ -122,6 +118,10 @@
     <ProjectReference Include="..\Forma Principal\Forma Principal.csproj">
       <Project>{a0c039de-9f65-4fa4-89da-13acf792745f}</Project>
       <Name>Forma Principal</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Funcionalidad_Formularios\Funcionalidad_Formularios\Funcionalidad_Formularios.csproj">
+      <Project>{9d2e35bf-622b-4992-8335-6011af47e8b4}</Project>
+      <Name>Funcionalidad_Formularios</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
